[fix] code refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,7 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-#Screenshots
+#Screen
 $screenshot*.bmp
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
